# Progetto

./: Documentazione.md  README.md  estat_nrg_cb_pem.tsv  pyproject.toml  webapp.py
pages/: Consumo.py  Deficit.py  Produzione.py  webapp.py
