[project]
name = "progetto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "altair>=5.4.1",
    "country-converter>=1.3",
    "geopandas>=1.0.1",
    "matplotlib>=3.9.2",
    "numpy==1.26.4",
    "pandas>=2.2.3",
    "pmdarima>=2.0.4",
    "polars>=1.14.0",
    "pyarrow>=18.0.0",
    "pycountry>=24.6.1",
    "seaborn>=0.13.2",
    "sktime>=0.34.0",
    "statsforecast>=1.7.8",
    "streamlit>=1.40.1",
    "vega-datasets>=0.9.0",
]
